Modified Jekyll config to explicitly set host to localhost

--- a/_config.yml
+++ b/_config.yml
@@ -34,3 +34,5 @@ permalink: pretty
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.md]
+
+host: localhost
